# wygitcpp

./: .gitmodules  CMakeLists.txt  CommandArguments.hpp  Common.hpp  GitCommands.hpp  GitRepository.cpp  GitRepository.hpp  README.md  main.cpp  test.txt
common/: Common.hpp  SHA1.cpp  SHA1.hpp  Zlib.cpp  Zlib.hpp
git_objects/: GitHash.cpp  GitHash.hpp  GitIndex.cpp  GitIndex.hpp  GitObject.cpp  GitObject.hpp  GitObjectsFactory.cpp  GitObjectsFactory.hpp  GitRepository.cpp  GitRepository.hpp
objects/: GitObject.cpp  GitObject.hpp
tests/: CMakeLists.txt  wyagitTests.cpp
utilities/: Common.cpp  Common.hpp  SHA1.cpp  SHA1.hpp  Zlib.cpp  Zlib.hpp
